<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43b3e6"
    tools:context=".VerifActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:text="@string/verifikasi"/>
        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/title"
            android:text="@string/send"/>
        <EditText
            android:id="@+id/ed_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="60dp"
            android:textColorHint="#d1d2d4"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:gravity="center"
            android:hint="@string/code"/>
        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/ed_verify"
            android:background="@drawable/my_button_bg"
            android:textColor="#ffffff"
            android:text="@string/send_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_not_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="110dp"
                android:layout_marginLeft="90dp"
                android:paddingRight="8dp"
                android:textColor="#d1d2d4"
                android:text="@string/not_resend" />
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="110dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/resend"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>