<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43b3e6"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/welcome_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_welcome_logo"
            android:layout_marginTop="120dp"/>

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_logo"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="16dp"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_username"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="16dp"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_password"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="19dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:background="@drawable/my_button_bg"/>
        <TextView
            android:id="@+id/tv_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:text="@string/or"
            android:textColor="#ffffff"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="16dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_or"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/con_fb"
            android:textColor="#ffffff"
            android:background="@drawable/my_button_bg"
            android:paddingStart="80dp"
            android:paddingEnd="45dp"
            android:drawableStart="@mipmap/ic_welcome_fb_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_not_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:layout_marginLeft="90dp"
                android:paddingRight="8dp"
                android:textColor="#d1d2d4"
                android:text="@string/not_have" />
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/register"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>